<resources>
    <string name="app_name">FoodPlannerProject</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="loginBtn">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="continue_as_guest"><u>Continue as Guest</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up\n</string>
    <string name="name">Name</string>
    <string name="already_have_acount">Already have an acount? Login</string>
    <string name="or_signup_with">or sign up with</string>
    <string name="signup_btn">Sign Up\n</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="discovery_search"><![CDATA[Discovery & Search]]></string>
    <string name="ingredients">Ingredients</string>
    <string name="country">Country</string>
    <string name="smart_search">Smart Search</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="search_recipes_ingredients">Search recipes, ingredients...</string>
    <string name="meal_name">Meal Name</string>
    <string name="planner">Planner</string>
    <string name="breakfast">Breakfast</string>
    <string name="my_favorite_meals">Favorite Meals </string>
</resources>