<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/kitchen_bg"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Glass Card -->
        <LinearLayout
            android:id="@+id/glassCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/glass_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center" />



            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="12dp"
                android:background="@drawable/input_bg"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_email"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:background="@null"
                    android:paddingStart="8dp"
                    android:textColor="#000"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <!-- Password -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="12dp"
                android:background="@drawable/input_bg"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:background="@null"
                    android:paddingStart="8dp"
                    android:textColor="#000"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
               android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/signup_btn"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginTop="24dp"
                app:backgroundTint="#2AD332"
                app:cornerRadius="16dp"/>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                />



        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
